
2023-02-25  Ron Norman <rjn@inglenet.com>

	* typeck.c: Check for small integer for add/subtruct and use
			cob_add_int/cob_sub_int as the speed in this case was improved

2023-02-19  Ron Norman <rjn@inglenet.com>

	* cobc.c,cobc.h: Added cb_max_binary to hold max digits allowed in binary
					data field and cb_max_compx for max length of COMP-X
	* field.c: Change to use cb_max_binary & cb_max_compx instead of constants 
				For COMP-N it has data in 'native' byte order
	* tree.c: Change to use cb_max_binary instead of constant 
	* typeck.c: Change to use cb_max_binary instead of constant 

2023-01-20  Ron Norman <rjn@inglenet.com>

	* codegen.c: Verify INDEXED BY variables in PERFORM VARYING
	* typeck.c: Add cb_emit_check_index to warn if SET constant value is 
	            out of bounds
	* codeoptim.c: Fix cob_check_subscript_inline for min subscript value

2023-01-15  Ron Norman <rjn@inglenet.com>

	* cobc.c: Make sure the 'schema' directory is created for -fsql
	* codegen.c: Verify that EXTERNAL variables have 'ename'
	* field.c (copy_into_field): If EXTERNAL set 'ename'

2022-11-26  Ron Norman <rjn@inglenet.com>

	* cobc.c,cobc.h: Add cb_keycompress flags
	* codegen.c: Emit keycompress value with cob_file_set_key
	* tree.h: add 'keycompress' to cb_alt_key
	* config.def: add 'keycompress' option
	* pplex.l,scanner.l,ppparse.y: Add code to pas thru KEYCOMPRESS value
	* parser.y: Pick up KEYCOMPRESS value to cb_alt_key for codegen

2022-11-16  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for computing length of ODO fields
	* typeck.c: EVALUATE when possible compute the expression values once

2022-11-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: For compare of unsigned numeric DISPLAY, PACKED, or COMP-6
				field to numeric literal use 'memcmp'
				Now using config option  odo-last-varlen
				Fix emitting of trace code if line# or statement type changes
	* typeck.c: Check for compare of unsigned numeric DISPLAY, PACKED or
				COMP-6 to numeric literal