@@ -1,4 +1,8 @@
 
+2023-02-26  Ron Norman <rjn@inglenet.com>
+
+	* field.c: Emit warning if COMP-X has PIC S9 as COMP-X is always unsigned
+
 2023-02-25  Ron Norman <rjn@inglenet.com>
 
 	* typeck.c: Check for small integer for add/subtruct and use
